--- a/CosmosDbClone/appsettings.json
+++ b/CosmosDbClone/appsettings.json
@@ -2,6 +2,7 @@
   "SourceDbName": "",
   "TargetDbName": "",
   "ConnectionStrings": {
-    "Source": ""
+    "Source": "",
+    "Target": ""
   }
 }
